syntax = "proto3";

package proto;

option go_package = ".;proto";

service Cos{
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse);
}

message DeleteObjectRequest {
  repeated string fids = 1;
}

message DeleteObjectResponse {
  bool success = 1;
}


message ResourceInfo{
  string fid = 1;
  string fileName = 2;
  string fileType = 3;
  string fileSize = 4;
  string md5 = 5;
}